syntax = "proto3";

package transaction;

option go_package = "./grpc/service/transaction";

// The service definition.
service Transaction {
  rpc Withdraw (WithdrawRequest) returns (TransactionFormatResponse) {}
  rpc Deposits (DepositsRequest) returns (TransactionFormatResponse) {}
  rpc Balance (User) returns (TransactionFormatResponse) {}
}

message WithdrawRequest {
  string UserID = 1;
  double Amount = 2;
}

message DepositsRequest {
  string UserID = 1;
  double Amount = 2;
}

message User {
  string UserID = 1;
}

message TransactionFormatResponse {
  double Balance = 1;
}
